--- a/WebDev bootcamp/section 15 - Color Game Project/styles.css
+++ b/WebDev bootcamp/section 15 - Color Game Project/styles.css
@@ -1,5 +1,7 @@
 body {
   background-color: #232323;
+  margin: 0;
+  font-family: 'Lato', sans-serif;
 }
 
 .square {
@@ -8,17 +10,38 @@ body {
   padding-bottom: 30%;
   float: left;
   margin: 1.66%;
+
+  border-radius: 15%;
+
+  transition: background 0.6s;
+  -webkit-transition: background 0.6s;
+  -moze-transition: background 0.6s;
 }
 
 #container {
-  margin: 0 auto;
+  margin: 20px auto;
   width: 600px;
 }
 
 h1 {
+  text-align: center;
   color: white;
+  background-color: steelblue;
+  margin: 0;
+  font-weight: normal;
+  text-transform: uppercase;
+  line-height: 1.1;
+  padding: 20px 0;
 }
 
+#colorDisplay {
+  font-size: 200%;
+}
+
+#message {
+  display: inline-block;
+  width: 20%;
+}
 
 #stripe {
   background-color: white;
@@ -28,5 +51,26 @@ h1 {
 
 
 .selected {
-  background-color: blue;
+  color: white;
+  background-color: steelblue;
+}
+
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  height: 100%;
+  font-weight: 700;
+  color: steelblue;
+  letter-spacing: 1px;
+  font-size: inherit;
+
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moze-transition: all 0.3s;
+}
+
+button:hover {
+  color: white;
+  background-color: steelblue;
 }
