--- a/WebDev bootcamp/section 15 - Color Game Project/styles.css
+++ b/WebDev bootcamp/section 15 - Color Game Project/styles.css
@@ -68,6 +68,8 @@ button {
   transition: all 0.3s;
   -webkit-transition: all 0.3s;
   -moze-transition: all 0.3s;
+
+  outline: none;
 }
 
 button:hover {
